# MiroFish

./: Dockerfile  README.md  docker-compose.yml  package.json  run_synthetica.py
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  graph.py  report.py  simulation.py
backend/app/models/: __init__.py  project.py  task.py
backend/app/services/: __init__.py  cognitive_agent.py  evaluator_node.py  graph_builder.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  synthetica_environment.py  synthetica_simulation_runner.py  text_processor.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_tools.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  retry.py  zep_paging.py
backend/scripts/: action_logger.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py  test_profile_format.py
frontend/: index.html
frontend/src/: App.vue
frontend/src/api/: graph.js  index.js  report.js  simulation.js
frontend/src/components/: GraphPanel.vue  HistoryDatabase.vue  Step1GraphBuild.vue  Step2EnvSetup.vue  Step3Simulation.vue  Step4Report.vue  Step5Interaction.vue
frontend/src/store/: pendingUpload.js
frontend/src/views/: Home.vue  InteractionView.vue  MainView.vue  Process.vue  ReportView.vue  SimulationRunView.vue  SimulationView.vue
