[project]
name = "mirofish-backend"
version = "0.1.0"
description = "A Cognitive Sandbox for testing emergent behavior, ideological evolution, and adversarial Swarm Intelligence."
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MiroFish Team" }
]

dependencies = [
    # 
    "flask>=3.0.0",
    "flask-cors>=6.0.0",
    
    # LLM 
    "openai>=1.0.0",
    
    # Zep Cloud
    "zep-cloud==3.13.0",
    

    
    # 
    "PyMuPDF>=1.24.0",
    # （UTF-8）
    "charset-normalizer>=3.0.0",
    "chardet>=5.0.0",
    
    # 
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pipreqs>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
